src/CSS-files/todoAddCard.css
#todo-add-card {
    margin: auto;
    top: -50%;
    background-color: var(--bg-secondary-color);
    width: 550px;

    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
    border: none;
    border-radius: 10px;

    display: flex;
    flex-direction: column;
    gap: 1rem;

    padding: 1.5rem;
    overflow: visible;
}

#todo-add-card::backdrop {
    background: none;
}

#todo-add-card input[type='text'] {
    border: none;
}

#todo-add-card input[type='date'] {
    border: 1px solid rgba(153, 153, 153, 0.5);
    border-radius: 5px;
    padding: 0rem 0.5rem;
    color: rgba(153, 153, 153);
    height: 2rem;
}

#todo-add-card input[type='text']::placeholder {
    color: rgba(153, 153, 153);
}

#todo-add-card .due-container {
    height: 2rem;
    border: 1px solid rgba(153, 153, 153, 0.5);
    border-radius: 5px;
    display: flex;
    place-content: center;
    padding: 1rem;
}

#todo-add-card .due-wrapper {
    gap: 0.5rem;
    color: rgba(153, 153, 153);
}

#todo-add-card .due-wrapper .svg {
    background: url('../assets/icons/flag/flag-grey.svg');
}

#todo-add-card #priority-container h4 {
    display: none;
}

#todo-add-card > input:nth-of-type(1) {
    font-size: 1.2rem;
    font-weight: bold;
}

#todo-add-card > input:nth-of-type(1)::placeholder {
    font-size: 1.4rem;
}

#todo-add-card > div:nth-of-type(1) {
    display: flex;
    place-items: center;
    gap: 1rem;
}

#todo-add-card > div:nth-of-type(2)::before {
    position: absolute;
    content: ' ';
    top: -1.5rem;
    width: 100%;
    height: 5px;
    border-top: 1px solid rgba(153, 153, 153, 0.5);
}

#todo-add-card > div:nth-of-type(2) {
    margin-top: 1.5rem;
    position: relative;
    display: flex;
    place-content: space-between;
}

#todo-add-card > div:nth-of-type(2) > div:nth-of-type(2) {
    display: flex;
    gap: 0.7rem;
}

